scss/_profilepage.scss
.profile-page-wrapper {
  max-width: 1100px;
  margin-inline: auto;
  display: flex;
  box-sizing: content-box;
  gap: 1rem;
  padding: 1rem;
}

.profile-informations {
  width: 100%;
  max-width: 300px;
  max-height: fit-content;
  // border: 1px solid red;
  padding: 1rem;
}

.profile-image-container {
  margin-block-end: 1rem;
  display: flex;
  justify-content: center;
}

img {
  max-width: 100%;
}

.p-image {
  width: 100%;
  max-width: 250px;
  min-height: 250px;
  border-radius: 50%;
  overflow: hidden;
  display: flex;
  outline: 2px solid hsl(0, 0%, 50%, 0.5);
  transition: scale 400ms, outline-offset 100ms;
  cursor: pointer;

  &:hover {
    scale: 0.95;
    outline-offset: 5px;
  }

  &:hover svg,
  &:hover img {
    scale: 1.05;
  }

  img,
  svg {
    width: 100%;
    height: 100%;
    object-fit: cover;
    transition: scale 300ms;
  }
}

//! Profile basic data styling

.p-name {
  font-size: 24px;
  line-height: 1.2lh;
  letter-spacing: -1px;
}

.p-username {
  font-size: 20px;
  font-weight: 200;
  line-height: 1lh;
  color: var(--p-username-clr);
  letter-spacing: -1px;
}

.p-bio {
  line-height: 0.9lh;
  word-break: break-all;
}

.profile-activity-tab {
  flex-grow: 1;
  overflow-x: hidden;
  position: relative;
  // border: 1px solid var(--slick-border-clr);
  min-height: 700px;
}

.profile-edit-button {
  display: block;
  width: 100%;
  background-color: var(--global-button-bg);
  border: 1px solid var(--slick-border-clr);
  padding: 0.325rem 0;
  font-size: 0.925rem;
  font-weight: 500;
  border-radius: 0.5rem;
  margin-block-start: 1rem;

  &:hover {
    background-color: var(--global-button-hover-bg);
  }
}

//! social tab
.social-links {
  padding: 1.525rem;
  border: 1px solid var(--slick-border-clr);
  border-radius: 0.525rem;
}

.social-links header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  // padding-block-end: 2rem;
}

.add-social-link-btn {
  background-color: var(--global-button-bg);
  border: 1px solid var(--slick-border-clr);
  padding: 0 0.425rem;
  padding-block: 0.125rem 0;
  border-radius: 0.325rem;
  font-size: 0.8325rem;
}

.social-link-display {
  display: grid;
  gap: 0.725rem;
}

.each-username-link-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 2rem;
  opacity: 0.7;
  font-weight: 200;

  a {
    flex-grow: 1;
    display: flex;
    align-items: center;
    gap: 1rem;
    border: 1px solid var(--slick-border-clr);
    background-color: var(--global-button-bg);
    border-radius: 0.325rem;
    padding-block: 0.225rem;
    padding-inline-start: 1rem;
    transition: 400ms;
  }

  .profile-url {
    font-size: 0.9rem;
    opacity: 0.6;
  }

  button {
    display: grid;
    place-items: center;
    background-color: var(--global-button-bg);
    width: 25px;
    height: 25px;
    border-radius: var(--global-button-border-radius);
    border: 1px solid var(--slick-border-clr);
  }

  &:hover {
    opacity: 1;

    a {
      translate: 5px 0;
    }
  }
}


.each-username-link-container:first-child{
  margin-block-start: 1.5rem;
}

// form
.social-links-edit-form-container {
  width: 100%;
  // min-height: 100%;
  background-color: var(--form-bg-clr);
  border: 1px solid var(--slick-border-clr);
  position: absolute;
  top: 0;
  left: 0;
  z-index: 2;
  padding: 1.525rem;
  border-radius: 0.525rem;

  translate: 100% 0;
  transition: 600ms;
  scale: 0.3;

  > div {
    display: grid;
    gap: 1rem;
  }
}

.social-link-inputs {
  border: 1px solid var(--slick-border-clr);
  border-radius: 0.425rem;
  font-size: 0.825rem;
  display: flex;
  align-items: center;
  margin-block-start: 0.425rem;

  > div {
    display: flex;
    align-items: center;
    gap: 0.525rem;
    margin-inline: 0.5rem;
  }

  input {
    min-width: 0;
    flex-grow: 1;
    border-radius: 0 0.325rem 0.325rem 0;
    border: unset;
    font-size: 0.925rem;
    padding: 0.425rem 0.625rem;
  }
}

.social-link-btn-container.social-link-btn-container {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  margin-block-start: 2rem;
  gap: 0.5rem;
}

.social-link-btn {
  background-color: var(--global-button-bg);
  border: 1px solid var(--slick-border-clr);
  border-radius: var(--global-button-border-radius);
  padding: var(--global-button-padding);

  &:hover {
    background-color: var(--global-button-hover-bg);
  }
}

// .url-copy-btn i {
//   pointer-events: none;
// }

//! profile edit form styling
.profile-edit-form {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 2;
  width: 100%;
  // min-height: 100%;
  background-color: var(--form-bg-clr);
  border: 1px solid var(--slick-border-clr);
  padding: 1.525rem;
  translate: 100% 0;
  transition: 600ms;
  scale: 0.3;
  border-radius: 0.5rem;
  z-index: 2;

  input,
  textarea,
  select,
  button {
    padding: 0.325rem 0.625rem;
  }

  textarea {
    height: 100px;
  }
}

.p-form-btns.p-form-btns {
  display: flex;
  justify-content: flex-end;
  margin: 0;
  margin-block-start: 2rem;
  gap: 0.5rem;

  button {
    border-radius: var(--global-button-border-radius);
    background-color: var(--global-button-bg);
    border: 1px solid var(--slick-border-clr);
    padding: var(--global-button-padding);

    &:hover {
      background-color: var(--global-button-hover-bg);
    }
  }
}

.profile-edit-form select {
  background-color: var(--input-textarea-bg);
  color: var(--body-clr);
  border: 1px solid var(--slick-border-clr);
  border-radius: 0.5rem;
  appearance: none;
  height: 37px;
  cursor: pointer;
}

.profile-edit-form option {
  background: var(--input-textarea-bg);
  color: #111;
}

